--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,17 @@ body {
   margin: 0;
 }
 
-/* .header {
+ .header {
     background-color: #007BFF; 
     color: #fff; 
     padding: 20px;
     text-align: center;
-} */
+} 
 
-/* .header h1 {
+ .header h1 {
     margin: 0;
     font-size: 2em;
-} */
+} 
 
 .profile-card {
   background-color: #fff;
